--- a/css/style.css
+++ b/css/style.css
@@ -901,7 +901,8 @@ h2.menu-item:after {
     border: 1px solid rgba(255, 255, 255, 0.4);
     display: table;
     transition: all 0.5s;
-    z-index: 1
+    z-index: 1;
+    color: #FFFFFF;
 }
 
 .dark .name-block {
